# example-kubeflow-qatransfer

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SEMEVAL_README.md  SQUAD_README.md  WIKIQA_README.md  notebook.ipynb  pyproject.toml  requirements.txt  run_semeval_tests.sh  run_squad_tests.sh  run_wikiqa_tests.sh  same.yaml  same_semeval.yaml  same_squad.yaml  same_wikiqa.yaml  semeval_notebook.ipynb  squad_notebook.ipynb  wikiqa_notebook.ipynb
.github/workflows/: test.yml
data/test/WikiQACorpus/: WikiQA-dev.txt  WikiQA-test.txt
data/test/data/squad/: dev-v1.1.json  train-v1.1.json
data/test/glove/: glove.6B.100d.txt
data/test/semeval/v3.2/: README.txt
data/test/semeval_files/semeval/: data_dev.json  data_test.json  data_train.json  shared_dev.json  shared_dev_000_000.json  shared_dev_000_001.json  shared_dev_000_002.json  shared_dev_000_003.json  shared_dev_000_004.json  shared_dev_000_005.json  shared_dev_000_006.json  (+23108 more)
src/: download.py  generate_semeval_test_files.py  pipeline.py  semeval_prepro.py  semeval_test.py  semeval_train.py
src/semeval/: download.py  generate_semeval_test_files.py  pipeline.py  semeval_prepro.py  semeval_test.py  semeval_train.py
src/squad/: download.py  generate_metrics.py  pipeline.py  prepro.py  test.py  train.py
src/wikiqa/: download.py  pipeline.py  wikiqa_evaluate.py  wikiqa_prepro.py  wikiqa_test.py  wikiqa_train.py
tests/: test.py  test_semeval.py  test_semeval_generate_files.py  test_semeval_prepro.py  test_semeval_test.py  test_semeval_train.py  test_squad.py  test_squad_prepro.py  test_squad_test.py  test_squad_train.py
tests/semeval/: test_semeval_01_prepro.py  test_semeval_02_train.py  test_semeval_03_generate_files.py  test_semeval_04_test.py  test_semeval_generate_files.py  test_semeval_prepro.py  test_semeval_test.py  test_semeval_train.py
tests/squad/: test_squad_01_prepro.py  test_squad_02_train.py  test_squad_03_test.py  test_squad_prepro.py  test_squad_test.py  test_squad_train.py
tests/wikiqa/: test_wikiqa_01_prepro.py  test_wikiqa_02_train.py  test_wikiqa_03_evaluate.py  test_wikiqa_04_test.py  test_wikiqa_evaluate.py  test_wikiqa_prepro.py  test_wikiqa_test.py  test_wikiqa_train.py
(+23 files in other folders)
